Fix post a job button not visible
https://3.basecamp.com/5798509/buckets/46502739/card_tables/cards/9706497988

--- a/blocks/employer-dashboard/style.css
+++ b/blocks/employer-dashboard/style.css
@@ -1715,10 +1715,3 @@
 	box-shadow: none;
 	outline-offset: 2px;
 }
-.wcb-sidebar-cta {
-	cursor: pointer;
-	border: none;
-	background: none;
-	padding: 0;
-	text-align: start;
-}
